--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <h3> Contacts : </h3>
 	<p>
 		<a href="https://facebook.com/luna.forest.125/" target="_blank"> <i class="fa-brands fa-facebook"id=logo></i></i></a>
-		<a href="https://wwww.linkedin.com/in/luna-forest"target="_blank"><i class="fa-brands fa-linkedin" id=logo></i></i></a>
+		<a href="https://www.linkedin.com/in/luna-forest-193385253/"target="_blank"><i class="fa-brands fa-linkedin" id=logo></i></i></a>
 	</p>
 </div>
 </body>
